# soft_template_cmake_cpp_project

./: CMakeLists.txt  README.md
config/: sys_config.yaml
dependencies/: CMakeLists.txt
dependencies/git_submodule_depA/: CMakeLists.txt  class.cpp  class.h
docs/: README.md
includes/: client.h
scripts/: cpack_install_script.bat  generate_docs.bat  target_install_script.bat
src/: client.cpp  main.cpp
